// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`test transform > inline mode output result 1`] = `
"import _imports_0 from "@/assets/sample.png";
import { useDefaults as _useDefaults } from "vue-vine";
import {
  defineComponent as _defineComponent,
  defineCustomElement as _defineCustomElement,
  useCssVars as _useCssVars,
  unref as _unref,
  openBlock as _openBlock,
  createElementBlock as _createElementBlock,
  createElementVNode as _createElementVNode,
  toDisplayString as _toDisplayString,
  Fragment as _Fragment,
  useSlots as _useSlots,
  useModel as _useModel,
  toRefs as _toRefs,
  createTextVNode as _createTextVNode,
  vShow as _vShow,
  withDirectives as _withDirectives,
  withAsyncContext as _withAsyncContext,
  createVNode as _createVNode,
} from "vue";

import "testTransformInlineResult?type=vine-style&vineFileId=testTransformInlineResult&scopeId=3921d7bd&comp=MyProfile&lang=css&index=0&virtual.css";
import "testTransformInlineResult?type=vine-style&vineFileId=testTransformInlineResult&scopeId=3921d7bd&comp=MyProfile&lang=css&scoped=true&index=1&virtual.css";
import "../styles/test1.less?type=vine-style-external&vineFileId=testTransformInlineResult&scopeId=3921d7bd&comp=MyProfile&lang=less&scoped=true&index=2&virtual.less";
import "../styles/test2.scss";
import "testTransformInlineResult?type=vine-style&vineFileId=testTransformInlineResult&scopeId=9c121b96&comp=MyApp&lang=css&scoped=true&index=0&virtual.css";

import { ref } from "vue";
import someDefaultExport from "some-module-1";
import { someNamedExport } from "some-module-2";
import * as someNamespaceExport from "some-module-3";
import type { SomeType } from "some-module-4";
import { someExternalFunction1, someExternalFunction2 } from "some-module-4";

const v1: SomeType = someExternalFunction1({ a: 1, b: 2 });
const v2 = ref(0);

someExternalFunction2();

export const SampleCustomElement = (() => {
  const __vine = _defineComponent({
    name: "SampleCustomElement",
    /* No props */
    /* No emits */
    setup(__props, { expose: __expose }) {
      __expose();
      const props = __props;

      return (_ctx, _cache) => {
        return (
          _openBlock(),
          _createElementBlock("div", null, "SampleCustomElement")
        );
      };
    },
  });

  __vine.__vue_vine = true;
  __vine.__hmrId = "10115e21";
  __vine.styles = [
    typeof __samplecustomelement_styles === "undefined"
      ? null
      : __samplecustomelement_styles,
  ].filter(Boolean);

  return _defineCustomElement(__vine);
})();

export const AnotherComp = (() => {
  const __vine = _defineComponent({
    name: "AnotherComp",
    props: {
      foo: {
        required: true,
        validator: (val: string) => val.startsWith("vine:"),
      },
      bar: { required: true, validator: (val: number) => val > 5 },
    },
    /* No emits */
    setup(__props, { expose: __expose }) {
      __expose();
      const props = __props;

      customElements.define("vi-sample-custom-element", SampleCustomElement);

      return (_ctx, _cache) => {
        return (
          _openBlock(),
          _createElementBlock(
            _Fragment,
            null,
            [
              _cache[0] ||
                (_cache[0] = _createElementVNode(
                  "div",
                  null,
                  "AnotherComp",
                  -1 /* CACHED */,
                )),
              _createElementVNode(
                "p",
                null,
                "foo:" + _toDisplayString(__props.foo),
                1 /* TEXT */,
              ),
              _createElementVNode(
                "p",
                null,
                "bar:" + _toDisplayString(__props.bar),
                1 /* TEXT */,
              ),
              _cache[1] ||
                (_cache[1] = _createElementVNode(
                  "vi-sample-custom-element",
                  null,
                  null,
                  -1 /* CACHED */,
                )),
            ],
            64 /* STABLE_FRAGMENT */,
          )
        );
      };
    },
  });

  __vine.__vue_vine = true;
  __vine.__hmrId = "4ea25612";

  return __vine;
})();

const options = {
  get: (v) => v,
  set: (v) => v,
};
export const MyProfile = (() => {
  const _hoisted_1 = { class: "my-profile" };
  const __vine = _defineComponent({
    name: "MyProfile",
    props: {
      name: { required: true },
      age: {
        /* Simple prop */
      },
      bio: {
        /* Simple prop */
      },
      modelValue: { default: "test" },
      modelModifiers: {},
      title: { default: "" },
      titleModifiers: {},
      count: {},
      countModifiers: {},
      propAccessors: { default: "", required: true },
      propAccessorsModifiers: {},
      methodAccessors: { default: "", required: true },
      methodAccessorsModifiers: {},
      spreadAccessors: { default: "", required: true, ...options },
      spreadAccessorsModifiers: {},
      identifierAccessors: options,
      identifierAccessorsModifiers: {},
    },
    emits: [
      "somethingChange",
      "update:modelValue",
      "update:title",
      "update:count",
      "update:propAccessors",
      "update:methodAccessors",
      "update:spreadAccessors",
      "update:identifierAccessors",
    ],
    setup(__props, { emit: __emit, expose: __expose }) {
      const emits = __emit;
      const props = _useDefaults(__props, {
        age: () => 18,
      });
      const { name, age, bio } = _toRefs(props);

      _useCssVars((_ctx) => ({
        "601ae0ef": textColor.value,
      }));

      const defaultModelWithValue = _useModel(__props, "modelValue");
      const title = _useModel(__props, "title");
      const count = _useModel(__props, "count");
      const propAccessors = _useModel(__props, "propAccessors", {
        get: (v) => v,
        set: (v) => v,
      });
      const methodAccessors = _useModel(__props, "methodAccessors", {
        get(v) {
          return v;
        },
        set(v) {
          return v;
        },
      });
      const spreadAccessors = _useModel(__props, "spreadAccessors", {
        ...options,
      });
      const identifierAccessors = _useModel(
        __props,
        "identifierAccessors",
        options,
      );
      const mySlots = _useSlots();

      const textColor = ref("#1c1c1c");
      const handleRefresh = () => {
        // ...
      };

      onMounted(async () => {
        const data = await fetch(
          "https://api.sampleapis.com/futurama/characters",
        );
        console.log(data);
      });

      __expose({
        age,
        bio,
      });

      return (_ctx, _cache) => {
        return (
          _openBlock(),
          _createElementBlock("div", _hoisted_1, [
            _createElementVNode("div", null, [
              _createTextVNode(_toDisplayString(name.value), 1 /* TEXT */),
              _createElementVNode(
                "span",
                null,
                " - " + _toDisplayString(age.value),
                1 /* TEXT */,
              ),
            ]),
            _withDirectives(
              _createElementVNode(
                "p",
                { class: "bio" },
                _toDisplayString(bio.value),
                513 /* TEXT, NEED_PATCH */,
              ),
              [[_vShow, bio.value]],
            ),
            _createElementVNode(
              "button",
              { onClick: handleRefresh },
              "Refresh",
            ),
            _cache[0] ||
              (_cache[0] = _createElementVNode(
                "img",
                {
                  src: _imports_0,
                  alt: "sample",
                },
                null,
                -1 /* CACHED */,
              )),
          ])
        );
      };
    },
  });

  __vine.__vue_vine = true;
  __vine.__scopeId = "data-v-3921d7bd";
  __vine.__hmrId = "3921d7bd";

  return __vine;
})();
export const MyApp = (() => {
  const _hoisted_1 = { class: "my-app" };
  const __vine = _defineComponent({
    name: "MyApp",
    /* No props */
    /* No emits */
    async setup(__props, { expose: __expose }) {
      __expose();
      let __temp, __restore;
      const props = __props;
      const data =
        (([__temp, __restore] = _withAsyncContext(() =>
          fetch("https://api.sampleapis.com/futurama/characters"),
        )),
        (__temp = await __temp),
        __restore(),
        __temp);

      return (_ctx, _cache) => {
        return (
          _openBlock(),
          _createElementBlock("div", _hoisted_1, [
            _cache[0] ||
              (_cache[0] = _createElementVNode(
                "h2",
                null,
                "Hello world",
                -1 /* CACHED */,
              )),
            _createVNode(MyProfile, {
              name: "Tomy",
              age: 24,
            }),
            _createVNode(AnotherComp, {
              foo: "vine:hello",
              bar: "10",
            }),
          ])
        );
      };
    },
  });

  __vine.__vue_vine = true;
  __vine.__scopeId = "data-v-9c121b96";
  __vine.__hmrId = "9c121b96";

  return __vine;
})();

typeof __VUE_HMR_RUNTIME__ !== "undefined" &&
  __VUE_HMR_RUNTIME__.createRecord(
    SampleCustomElement.__hmrId,
    SampleCustomElement,
  );

typeof __VUE_HMR_RUNTIME__ !== "undefined" &&
  __VUE_HMR_RUNTIME__.createRecord(AnotherComp.__hmrId, AnotherComp);

typeof __VUE_HMR_RUNTIME__ !== "undefined" &&
  __VUE_HMR_RUNTIME__.createRecord(MyProfile.__hmrId, MyProfile);

typeof __VUE_HMR_RUNTIME__ !== "undefined" &&
  __VUE_HMR_RUNTIME__.createRecord(MyApp.__hmrId, MyApp);

export default MyApp;
"
`;

exports[`test transform > not output HMR content in non-dev mode 1`] = `
"import _imports_0 from "@/assets/sample.png";
import { useDefaults as _useDefaults } from "vue-vine";
import {
  defineComponent as _defineComponent,
  defineCustomElement as _defineCustomElement,
  useCssVars as _useCssVars,
  unref as _unref,
  openBlock as _openBlock,
  createElementBlock as _createElementBlock,
  createElementVNode as _createElementVNode,
  toDisplayString as _toDisplayString,
  resolveComponent as _resolveComponent,
  createVNode as _createVNode,
  Fragment as _Fragment,
  useSlots as _useSlots,
  useModel as _useModel,
  toRefs as _toRefs,
  createTextVNode as _createTextVNode,
  vShow as _vShow,
  withDirectives as _withDirectives,
  withAsyncContext as _withAsyncContext,
} from "vue";

import "testNoHMRContentOnProduction?type=vine-style&vineFileId=testNoHMRContentOnProduction&scopeId=3b48c990&comp=MyProfile&lang=css&index=0&virtual.css";
import "testNoHMRContentOnProduction?type=vine-style&vineFileId=testNoHMRContentOnProduction&scopeId=3b48c990&comp=MyProfile&lang=css&scoped=true&index=1&virtual.css";
import "../styles/test1.less?type=vine-style-external&vineFileId=testNoHMRContentOnProduction&scopeId=3b48c990&comp=MyProfile&lang=less&scoped=true&index=2&virtual.less";
import "../styles/test2.scss";
import "testNoHMRContentOnProduction?type=vine-style&vineFileId=testNoHMRContentOnProduction&scopeId=c5a474f0&comp=MyApp&lang=css&scoped=true&index=0&virtual.css";

import { ref } from "vue";
import someDefaultExport from "some-module-1";
import { someNamedExport } from "some-module-2";
import * as someNamespaceExport from "some-module-3";
import type { SomeType } from "some-module-4";
import { someExternalFunction1, someExternalFunction2 } from "some-module-4";

const v1: SomeType = someExternalFunction1({ a: 1, b: 2 });
const v2 = ref(0);

someExternalFunction2();

export const SampleCustomElement = (() => {
  const __vine = _defineComponent({
    name: "SampleCustomElement",
    /* No props */
    /* No emits */
    setup(__props, { expose: __expose }) {
      __expose();
      const props = __props;

      return (_ctx, _cache) => {
        return (
          _openBlock(),
          _createElementBlock("div", null, "SampleCustomElement")
        );
      };
    },
  });

  __vine.__vue_vine = true;
  __vine.styles = [
    typeof __samplecustomelement_styles === "undefined"
      ? null
      : __samplecustomelement_styles,
  ].filter(Boolean);

  return _defineCustomElement(__vine);
})();

export const AnotherComp = (() => {
  const __vine = _defineComponent({
    name: "AnotherComp",
    props: {
      foo: {
        required: true,
        validator: (val: string) => val.startsWith("vine:"),
      },
      bar: { required: true, validator: (val: number) => val > 5 },
    },
    /* No emits */
    setup(__props, { expose: __expose }) {
      __expose();
      const props = __props;

      customElements.define("vi-sample-custom-element", SampleCustomElement);

      return (_ctx, _cache) => {
        const _component_vi_sample_custom_element =
          typeof ViSampleCustomElement === "undefined"
            ? _resolveComponent("vi-sample-custom-element")
            : ViSampleCustomElement;

        return (
          _openBlock(),
          _createElementBlock(
            _Fragment,
            null,
            [
              _cache[0] ||
                (_cache[0] = _createElementVNode(
                  "div",
                  null,
                  "AnotherComp",
                  -1 /* CACHED */,
                )),
              _createElementVNode(
                "p",
                null,
                "foo:" + _toDisplayString(__props.foo),
                1 /* TEXT */,
              ),
              _createElementVNode(
                "p",
                null,
                "bar:" + _toDisplayString(__props.bar),
                1 /* TEXT */,
              ),
              _createVNode(_component_vi_sample_custom_element),
            ],
            64 /* STABLE_FRAGMENT */,
          )
        );
      };
    },
  });

  __vine.__vue_vine = true;

  return __vine;
})();

const options = {
  get: (v) => v,
  set: (v) => v,
};
export const MyProfile = (() => {
  const _hoisted_1 = { class: "my-profile" };
  const __vine = _defineComponent({
    name: "MyProfile",
    props: {
      name: { required: true },
      age: {
        /* Simple prop */
      },
      bio: {
        /* Simple prop */
      },
      modelValue: { default: "test" },
      modelModifiers: {},
      title: { default: "" },
      titleModifiers: {},
      count: {},
      countModifiers: {},
      propAccessors: { default: "", required: true },
      propAccessorsModifiers: {},
      methodAccessors: { default: "", required: true },
      methodAccessorsModifiers: {},
      spreadAccessors: { default: "", required: true, ...options },
      spreadAccessorsModifiers: {},
      identifierAccessors: options,
      identifierAccessorsModifiers: {},
    },
    emits: [
      "somethingChange",
      "update:modelValue",
      "update:title",
      "update:count",
      "update:propAccessors",
      "update:methodAccessors",
      "update:spreadAccessors",
      "update:identifierAccessors",
    ],
    setup(__props, { emit: __emit, expose: __expose }) {
      const emits = __emit;
      const props = _useDefaults(__props, {
        age: () => 18,
      });
      const { name, age, bio } = _toRefs(props);

      _useCssVars((_ctx) => ({
        "601ae0ef": textColor.value,
      }));

      const defaultModelWithValue = _useModel(__props, "modelValue");
      const title = _useModel(__props, "title");
      const count = _useModel(__props, "count");
      const propAccessors = _useModel(__props, "propAccessors", {
        get: (v) => v,
        set: (v) => v,
      });
      const methodAccessors = _useModel(__props, "methodAccessors", {
        get(v) {
          return v;
        },
        set(v) {
          return v;
        },
      });
      const spreadAccessors = _useModel(__props, "spreadAccessors", {
        ...options,
      });
      const identifierAccessors = _useModel(
        __props,
        "identifierAccessors",
        options,
      );
      const mySlots = _useSlots();

      const textColor = ref("#1c1c1c");
      const handleRefresh = () => {
        // ...
      };

      onMounted(async () => {
        const data = await fetch(
          "https://api.sampleapis.com/futurama/characters",
        );
        console.log(data);
      });

      __expose({
        age,
        bio,
      });

      return (_ctx, _cache) => {
        return (
          _openBlock(),
          _createElementBlock("div", _hoisted_1, [
            _createElementVNode("div", null, [
              _createTextVNode(_toDisplayString(name.value), 1 /* TEXT */),
              _createElementVNode(
                "span",
                null,
                " - " + _toDisplayString(age.value),
                1 /* TEXT */,
              ),
            ]),
            _withDirectives(
              _createElementVNode(
                "p",
                { class: "bio" },
                _toDisplayString(bio.value),
                513 /* TEXT, NEED_PATCH */,
              ),
              [[_vShow, bio.value]],
            ),
            _createElementVNode(
              "button",
              { onClick: handleRefresh },
              "Refresh",
            ),
            _cache[0] ||
              (_cache[0] = _createElementVNode(
                "img",
                {
                  src: _imports_0,
                  alt: "sample",
                },
                null,
                -1 /* CACHED */,
              )),
          ])
        );
      };
    },
  });

  __vine.__vue_vine = true;
  __vine.__scopeId = "data-v-3b48c990";

  return __vine;
})();
export const MyApp = (() => {
  const _hoisted_1 = { class: "my-app" };
  const __vine = _defineComponent({
    name: "MyApp",
    /* No props */
    /* No emits */
    async setup(__props, { expose: __expose }) {
      __expose();
      let __temp, __restore;
      const props = __props;
      const data =
        (([__temp, __restore] = _withAsyncContext(() =>
          fetch("https://api.sampleapis.com/futurama/characters"),
        )),
        (__temp = await __temp),
        __restore(),
        __temp);

      return (_ctx, _cache) => {
        return (
          _openBlock(),
          _createElementBlock("div", _hoisted_1, [
            _cache[0] ||
              (_cache[0] = _createElementVNode(
                "h2",
                null,
                "Hello world",
                -1 /* CACHED */,
              )),
            _createVNode(MyProfile, {
              name: "Tomy",
              age: 24,
            }),
            _createVNode(AnotherComp, {
              foo: "vine:hello",
              bar: "10",
            }),
          ])
        );
      };
    },
  });

  __vine.__vue_vine = true;
  __vine.__scopeId = "data-v-c5a474f0";

  return __vine;
})();

export default MyApp;
"
`;

exports[`test transform > separated mode output result 1`] = `
"import _imports_0 from "@/assets/sample.png";
import { useDefaults as _useDefaults } from "vue-vine";
import {
  defineComponent as _defineComponent,
  defineCustomElement as _defineCustomElement,
  useCssVars as _useCssVars,
  openBlock as _openBlock,
  createElementBlock as _createElementBlock,
  createElementVNode as _createElementVNode,
  toDisplayString as _toDisplayString,
  resolveComponent as _resolveComponent,
  createVNode as _createVNode,
  Fragment as _Fragment,
  useSlots as _useSlots,
  useModel as _useModel,
  toRefs as _toRefs,
  createTextVNode as _createTextVNode,
  vShow as _vShow,
  withDirectives as _withDirectives,
  withAsyncContext as _withAsyncContext,
} from "vue";

import "testTransformSeparatedResult?type=vine-style&vineFileId=testTransformSeparatedResult&scopeId=25e4e706&comp=MyProfile&lang=css&index=0&virtual.css";
import "testTransformSeparatedResult?type=vine-style&vineFileId=testTransformSeparatedResult&scopeId=25e4e706&comp=MyProfile&lang=css&scoped=true&index=1&virtual.css";
import "../styles/test1.less?type=vine-style-external&vineFileId=testTransformSeparatedResult&scopeId=25e4e706&comp=MyProfile&lang=less&scoped=true&index=2&virtual.less";
import "../styles/test2.scss";
import "testTransformSeparatedResult?type=vine-style&vineFileId=testTransformSeparatedResult&scopeId=b909f216&comp=MyApp&lang=css&scoped=true&index=0&virtual.css";

import { ref } from "vue";
import someDefaultExport from "some-module-1";
import { someNamedExport } from "some-module-2";
import * as someNamespaceExport from "some-module-3";
import type { SomeType } from "some-module-4";
import { someExternalFunction1, someExternalFunction2 } from "some-module-4";

const v1: SomeType = someExternalFunction1({ a: 1, b: 2 });
const v2 = ref(0);

someExternalFunction2();

export const SampleCustomElement = (() => {
  const __vine = _defineComponent({
    name: "SampleCustomElement",
    /* No props */
    /* No emits */
    setup(__props, { expose: __expose }) {
      __expose();
      const props = __props;

      return {
        v1,
        v2,
        SampleCustomElement,
        AnotherComp,
        options,
        MyProfile,
        MyApp,
      };
    },
  });
  function __sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
    return (
      _openBlock(),
      _createElementBlock("div", null, "SampleCustomElement")
    );
  }
  __vine.render = __sfc_render;
  __vine.__vue_vine = true;
  __vine.__hmrId = "d91bba3e";
  __vine.styles = [
    typeof __samplecustomelement_styles === "undefined"
      ? null
      : __samplecustomelement_styles,
  ].filter(Boolean);

  return _defineCustomElement(__vine);
})();

export const AnotherComp = (() => {
  const __vine = _defineComponent({
    name: "AnotherComp",
    props: {
      foo: {
        required: true,
        validator: (val: string) => val.startsWith("vine:"),
      },
      bar: { required: true, validator: (val: number) => val > 5 },
    },
    /* No emits */
    setup(__props, { expose: __expose }) {
      __expose();
      const props = __props;

      customElements.define("vi-sample-custom-element", SampleCustomElement);

      return {
        v1,
        v2,
        SampleCustomElement,
        AnotherComp,
        options,
        MyProfile,
        MyApp,
      };
    },
  });
  function __sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
    const _component_vi_sample_custom_element =
      typeof ViSampleCustomElement === "undefined"
        ? _resolveComponent("vi-sample-custom-element")
        : ViSampleCustomElement;

    return (
      _openBlock(),
      _createElementBlock(
        _Fragment,
        null,
        [
          _cache[0] ||
            (_cache[0] = _createElementVNode(
              "div",
              null,
              "AnotherComp",
              -1 /* CACHED */,
            )),
          _createElementVNode(
            "p",
            null,
            "foo:" + _toDisplayString($props.foo),
            1 /* TEXT */,
          ),
          _createElementVNode(
            "p",
            null,
            "bar:" + _toDisplayString($props.bar),
            1 /* TEXT */,
          ),
          _createVNode(_component_vi_sample_custom_element),
        ],
        64 /* STABLE_FRAGMENT */,
      )
    );
  }
  __vine.render = __sfc_render;
  __vine.__vue_vine = true;
  __vine.__hmrId = "93184a5c";

  return __vine;
})();

const options = {
  get: (v) => v,
  set: (v) => v,
};
export const MyProfile = (() => {
  const _hoisted_1 = { class: "my-profile" };
  const __vine = _defineComponent({
    name: "MyProfile",
    props: {
      name: { required: true },
      age: {
        /* Simple prop */
      },
      bio: {
        /* Simple prop */
      },
      modelValue: { default: "test" },
      modelModifiers: {},
      title: { default: "" },
      titleModifiers: {},
      count: {},
      countModifiers: {},
      propAccessors: { default: "", required: true },
      propAccessorsModifiers: {},
      methodAccessors: { default: "", required: true },
      methodAccessorsModifiers: {},
      spreadAccessors: { default: "", required: true, ...options },
      spreadAccessorsModifiers: {},
      identifierAccessors: options,
      identifierAccessorsModifiers: {},
    },
    emits: [
      "somethingChange",
      "update:modelValue",
      "update:title",
      "update:count",
      "update:propAccessors",
      "update:methodAccessors",
      "update:spreadAccessors",
      "update:identifierAccessors",
    ],
    setup(__props, { emit: __emit, expose: __expose }) {
      const emits = __emit;
      const props = _useDefaults(__props, {
        age: () => 18,
      });
      const { name, age, bio } = _toRefs(props);

      _useCssVars((_ctx) => ({
        "601ae0ef": _ctx.textColor,
      }));

      const defaultModelWithValue = _useModel(__props, "modelValue");
      const title = _useModel(__props, "title");
      const count = _useModel(__props, "count");
      const propAccessors = _useModel(__props, "propAccessors", {
        get: (v) => v,
        set: (v) => v,
      });
      const methodAccessors = _useModel(__props, "methodAccessors", {
        get(v) {
          return v;
        },
        set(v) {
          return v;
        },
      });
      const spreadAccessors = _useModel(__props, "spreadAccessors", {
        ...options,
      });
      const identifierAccessors = _useModel(
        __props,
        "identifierAccessors",
        options,
      );
      const mySlots = _useSlots();

      const textColor = ref("#1c1c1c");
      const handleRefresh = () => {
        // ...
      };

      onMounted(async () => {
        const data = await fetch(
          "https://api.sampleapis.com/futurama/characters",
        );
        console.log(data);
      });

      __expose({
        age,
        bio,
      });

      return {
        name,
        age,
        bio,
        defaultModelWithValue,
        title,
        count,
        propAccessors,
        methodAccessors,
        spreadAccessors,
        identifierAccessors,
        textColor,
        handleRefresh,
        v1,
        v2,
        SampleCustomElement,
        AnotherComp,
        options,
        MyProfile,
        MyApp,
      };
    },
  });
  function __sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
    return (
      _openBlock(),
      _createElementBlock("div", _hoisted_1, [
        _createElementVNode("div", null, [
          _createTextVNode(_toDisplayString($setup.name), 1 /* TEXT */),
          _createElementVNode(
            "span",
            null,
            " - " + _toDisplayString($setup.age),
            1 /* TEXT */,
          ),
        ]),
        _withDirectives(
          _createElementVNode(
            "p",
            { class: "bio" },
            _toDisplayString($setup.bio),
            513 /* TEXT, NEED_PATCH */,
          ),
          [[_vShow, $setup.bio]],
        ),
        _createElementVNode(
          "button",
          { onClick: $setup.handleRefresh },
          "Refresh",
        ),
        _cache[0] ||
          (_cache[0] = _createElementVNode(
            "img",
            {
              src: _imports_0,
              alt: "sample",
            },
            null,
            -1 /* CACHED */,
          )),
      ])
    );
  }
  __vine.render = __sfc_render;
  __vine.__vue_vine = true;
  __vine.__scopeId = "data-v-25e4e706";
  __vine.__hmrId = "25e4e706";

  return __vine;
})();
export const MyApp = (() => {
  const _hoisted_1 = { class: "my-app" };
  const __vine = _defineComponent({
    name: "MyApp",
    /* No props */
    /* No emits */
    async setup(__props, { expose: __expose }) {
      __expose();
      let __temp, __restore;
      const props = __props;
      const data =
        (([__temp, __restore] = _withAsyncContext(() =>
          fetch("https://api.sampleapis.com/futurama/characters"),
        )),
        (__temp = await __temp),
        __restore(),
        __temp);

      return {
        data,
        v1,
        v2,
        SampleCustomElement,
        AnotherComp,
        options,
        MyProfile,
        MyApp,
      };
    },
  });
  function __sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
    return (
      _openBlock(),
      _createElementBlock("div", _hoisted_1, [
        _cache[0] ||
          (_cache[0] = _createElementVNode(
            "h2",
            null,
            "Hello world",
            -1 /* CACHED */,
          )),
        _createVNode($setup["MyProfile"], {
          name: "Tomy",
          age: 24,
        }),
        _createVNode($setup["AnotherComp"], {
          foo: "vine:hello",
          bar: "10",
        }),
      ])
    );
  }
  __vine.render = __sfc_render;
  __vine.__vue_vine = true;
  __vine.__scopeId = "data-v-b909f216";
  __vine.__hmrId = "b909f216";

  return __vine;
})();

typeof __VUE_HMR_RUNTIME__ !== "undefined" &&
  __VUE_HMR_RUNTIME__.createRecord(
    SampleCustomElement.__hmrId,
    SampleCustomElement,
  );

typeof __VUE_HMR_RUNTIME__ !== "undefined" &&
  __VUE_HMR_RUNTIME__.createRecord(AnotherComp.__hmrId, AnotherComp);

typeof __VUE_HMR_RUNTIME__ !== "undefined" &&
  __VUE_HMR_RUNTIME__.createRecord(MyProfile.__hmrId, MyProfile);

typeof __VUE_HMR_RUNTIME__ !== "undefined" &&
  __VUE_HMR_RUNTIME__.createRecord(MyApp.__hmrId, MyApp);

export default MyApp;
"
`;

exports[`test transform > separated mode output result by ssr 1`] = `
"import _imports_0 from "@/assets/sample.png";
import { useDefaults as _useDefaults } from "vue-vine";
import {
  ssrRenderAttrs as _ssrRenderAttrs,
  ssrRenderComponent as _ssrRenderComponent,
  ssrInterpolate as _ssrInterpolate,
  ssrRenderStyle as _ssrRenderStyle,
  ssrRenderAttr as _ssrRenderAttr,
} from "vue/server-renderer";
import {
  defineComponent as _defineComponent,
  defineCustomElement as _defineCustomElement,
  useCssVars as _useCssVars,
  resolveComponent as _resolveComponent,
  useSlots as _useSlots,
  useModel as _useModel,
  toRefs as _toRefs,
  mergeProps as _mergeProps,
  withAsyncContext as _withAsyncContext,
} from "vue";

import "testTransformSeparatedResult?type=vine-style&vineFileId=testTransformSeparatedResult&scopeId=25e4e706&comp=MyProfile&lang=css&index=0&virtual.css";
import "testTransformSeparatedResult?type=vine-style&vineFileId=testTransformSeparatedResult&scopeId=25e4e706&comp=MyProfile&lang=css&scoped=true&index=1&virtual.css";
import "../styles/test1.less?type=vine-style-external&vineFileId=testTransformSeparatedResult&scopeId=25e4e706&comp=MyProfile&lang=less&scoped=true&index=2&virtual.less";
import "../styles/test2.scss";
import "testTransformSeparatedResult?type=vine-style&vineFileId=testTransformSeparatedResult&scopeId=b909f216&comp=MyApp&lang=css&scoped=true&index=0&virtual.css";

import { ref } from "vue";
import someDefaultExport from "some-module-1";
import { someNamedExport } from "some-module-2";
import * as someNamespaceExport from "some-module-3";
import type { SomeType } from "some-module-4";
import { someExternalFunction1, someExternalFunction2 } from "some-module-4";

const v1: SomeType = someExternalFunction1({ a: 1, b: 2 });
const v2 = ref(0);

someExternalFunction2();

export const SampleCustomElement = (() => {
  const __vine = _defineComponent({
    name: "SampleCustomElement",
    /* No props */
    /* No emits */
    setup(__props, { expose: __expose }) {
      __expose();
      const props = __props;

      return {
        v1,
        v2,
        SampleCustomElement,
        AnotherComp,
        options,
        MyProfile,
        MyApp,
      };
    },
  });
  function __sfc_ssr_render(
    _ctx,
    _push,
    _parent,
    _attrs,
    $props,
    $setup,
    $data,
    $options,
  ) {
    _push(
      \`<div\${_ssrRenderAttrs(_attrs)} data-v-d91bba3e>SampleCustomElement</div>\`,
    );
  }
  __vine.ssrRender = __sfc_ssr_render;
  __vine.__vue_vine = true;
  __vine.__hmrId = "d91bba3e";
  __vine.styles = [
    typeof __samplecustomelement_styles === "undefined"
      ? null
      : __samplecustomelement_styles,
  ].filter(Boolean);

  return _defineCustomElement(__vine);
})();

export const AnotherComp = (() => {
  const __vine = _defineComponent({
    name: "AnotherComp",
    props: {
      foo: {
        required: true,
        validator: (val: string) => val.startsWith("vine:"),
      },
      bar: { required: true, validator: (val: number) => val > 5 },
    },
    /* No emits */
    setup(__props, { expose: __expose }) {
      __expose();
      const props = __props;

      customElements.define("vi-sample-custom-element", SampleCustomElement);

      return {
        v1,
        v2,
        SampleCustomElement,
        AnotherComp,
        options,
        MyProfile,
        MyApp,
      };
    },
  });
  function __sfc_ssr_render(
    _ctx,
    _push,
    _parent,
    _attrs,
    $props,
    $setup,
    $data,
    $options,
  ) {
    const _component_vi_sample_custom_element =
      typeof ViSampleCustomElement === "undefined"
        ? _resolveComponent("vi-sample-custom-element")
        : ViSampleCustomElement;

    _push(
      \`<!--[--><div data-v-93184a5c>AnotherComp</div><p data-v-93184a5c>foo:\${_ssrInterpolate(
        $props.foo,
      )}</p><p data-v-93184a5c>bar:\${_ssrInterpolate($props.bar)}</p>\`,
    );
    _push(
      _ssrRenderComponent(
        _component_vi_sample_custom_element,
        null,
        null,
        _parent,
      ),
    );
    _push(\`<!--]-->\`);
  }
  __vine.ssrRender = __sfc_ssr_render;
  __vine.__vue_vine = true;
  __vine.__hmrId = "93184a5c";

  return __vine;
})();

const options = {
  get: (v) => v,
  set: (v) => v,
};
export const MyProfile = (() => {
  const __vine = _defineComponent({
    name: "MyProfile",
    props: {
      name: { required: true },
      age: {
        /* Simple prop */
      },
      bio: {
        /* Simple prop */
      },
      modelValue: { default: "test" },
      modelModifiers: {},
      title: { default: "" },
      titleModifiers: {},
      count: {},
      countModifiers: {},
      propAccessors: { default: "", required: true },
      propAccessorsModifiers: {},
      methodAccessors: { default: "", required: true },
      methodAccessorsModifiers: {},
      spreadAccessors: { default: "", required: true, ...options },
      spreadAccessorsModifiers: {},
      identifierAccessors: options,
      identifierAccessorsModifiers: {},
    },
    emits: [
      "somethingChange",
      "update:modelValue",
      "update:title",
      "update:count",
      "update:propAccessors",
      "update:methodAccessors",
      "update:spreadAccessors",
      "update:identifierAccessors",
    ],
    setup(__props, { emit: __emit, expose: __expose }) {
      const emits = __emit;
      const props = _useDefaults(__props, {
        age: () => 18,
      });
      const { name, age, bio } = _toRefs(props);

      _useCssVars((_ctx) => ({
        "601ae0ef": _ctx.textColor,
      }));

      const defaultModelWithValue = _useModel(__props, "modelValue");
      const title = _useModel(__props, "title");
      const count = _useModel(__props, "count");
      const propAccessors = _useModel(__props, "propAccessors", {
        get: (v) => v,
        set: (v) => v,
      });
      const methodAccessors = _useModel(__props, "methodAccessors", {
        get(v) {
          return v;
        },
        set(v) {
          return v;
        },
      });
      const spreadAccessors = _useModel(__props, "spreadAccessors", {
        ...options,
      });
      const identifierAccessors = _useModel(
        __props,
        "identifierAccessors",
        options,
      );
      const mySlots = _useSlots();

      const textColor = ref("#1c1c1c");
      const handleRefresh = () => {
        // ...
      };

      onMounted(async () => {
        const data = await fetch(
          "https://api.sampleapis.com/futurama/characters",
        );
        console.log(data);
      });

      __expose({
        age,
        bio,
      });

      return {
        name,
        age,
        bio,
        defaultModelWithValue,
        title,
        count,
        propAccessors,
        methodAccessors,
        spreadAccessors,
        identifierAccessors,
        textColor,
        handleRefresh,
        v1,
        v2,
        SampleCustomElement,
        AnotherComp,
        options,
        MyProfile,
        MyApp,
      };
    },
  });
  function __sfc_ssr_render(
    _ctx,
    _push,
    _parent,
    _attrs,
    $props,
    $setup,
    $data,
    $options,
  ) {
    _push(
      \`<div\${_ssrRenderAttrs(
        _mergeProps({ class: "my-profile" }, _attrs),
      )} data-v-25e4e706><div data-v-25e4e706>\${_ssrInterpolate(
        $setup.name,
      )}<span data-v-25e4e706> - \${_ssrInterpolate(
        $setup.age,
      )}</span></div><p class="bio" style="\${_ssrRenderStyle(
        $setup.bio ? null : { display: "none" },
      )}" data-v-25e4e706>\${_ssrInterpolate(
        $setup.bio,
      )}</p><button data-v-25e4e706>Refresh</button><img\${_ssrRenderAttr(
        "src",
        _imports_0,
      )} alt="sample" data-v-25e4e706></div>\`,
    );
  }
  __vine.ssrRender = __sfc_ssr_render;
  __vine.__vue_vine = true;
  __vine.__scopeId = "data-v-25e4e706";
  __vine.__hmrId = "25e4e706";

  return __vine;
})();
export const MyApp = (() => {
  const __vine = _defineComponent({
    name: "MyApp",
    /* No props */
    /* No emits */
    async setup(__props, { expose: __expose }) {
      __expose();
      let __temp, __restore;
      const props = __props;
      const data =
        (([__temp, __restore] = _withAsyncContext(() =>
          fetch("https://api.sampleapis.com/futurama/characters"),
        )),
        (__temp = await __temp),
        __restore(),
        __temp);

      return {
        data,
        v1,
        v2,
        SampleCustomElement,
        AnotherComp,
        options,
        MyProfile,
        MyApp,
      };
    },
  });
  function __sfc_ssr_render(
    _ctx,
    _push,
    _parent,
    _attrs,
    $props,
    $setup,
    $data,
    $options,
  ) {
    _push(
      \`<div\${_ssrRenderAttrs(_mergeProps({ class: "my-app" }, _attrs))} data-v-b909f216><h2 data-v-b909f216>Hello world</h2>\`,
    );
    _push(
      _ssrRenderComponent(
        $setup["MyProfile"],
        {
          name: "Tomy",
          age: 24,
        },
        null,
        _parent,
      ),
    );
    _push(
      _ssrRenderComponent(
        $setup["AnotherComp"],
        {
          foo: "vine:hello",
          bar: "10",
        },
        null,
        _parent,
      ),
    );
    _push(\`</div>\`);
  }
  __vine.ssrRender = __sfc_ssr_render;
  __vine.__vue_vine = true;
  __vine.__scopeId = "data-v-b909f216";
  __vine.__hmrId = "b909f216";

  return __vine;
})();

typeof __VUE_HMR_RUNTIME__ !== "undefined" &&
  __VUE_HMR_RUNTIME__.createRecord(
    SampleCustomElement.__hmrId,
    SampleCustomElement,
  );

typeof __VUE_HMR_RUNTIME__ !== "undefined" &&
  __VUE_HMR_RUNTIME__.createRecord(AnotherComp.__hmrId, AnotherComp);

typeof __VUE_HMR_RUNTIME__ !== "undefined" &&
  __VUE_HMR_RUNTIME__.createRecord(MyProfile.__hmrId, MyProfile);

typeof __VUE_HMR_RUNTIME__ !== "undefined" &&
  __VUE_HMR_RUNTIME__.createRecord(MyApp.__hmrId, MyApp);

export default MyApp;
"
`;

exports[`test transform > should generate export default in correct position 1`] = `
"import {
  defineComponent as _defineComponent,
  useCssVars as _useCssVars,
  unref as _unref,
  openBlock as _openBlock,
  createElementBlock as _createElementBlock,
} from "vue";

export const MyComp = (() => {
  const __vine = _defineComponent({
    name: "MyComp",
    /* No props */
    /* No emits */
    setup(__props, { expose: __expose }) {
      __expose();
      const props = __props;

      return (_ctx, _cache) => {
        return (_openBlock(), _createElementBlock("div", null, "Test"));
      };
    },
  });

  __vine.__vue_vine = true;
  __vine.__hmrId = "cc6366e8";

  return __vine;
})();

typeof __VUE_HMR_RUNTIME__ !== "undefined" &&
  __VUE_HMR_RUNTIME__.createRecord(MyComp.__hmrId, MyComp);

export default MyComp;
"
`;

exports[`test transform > should generate hmrId If there is no style 1`] = `
"import {
  defineComponent as _defineComponent,
  useCssVars as _useCssVars,
  unref as _unref,
  createElementVNode as _createElementVNode,
  openBlock as _openBlock,
  createElementBlock as _createElementBlock,
} from "vue";

export const About = (() => {
  const __vine = _defineComponent({
    name: "About",
    /* No props */
    /* No emits */
    setup(__props, { expose: __expose }) {
      __expose();
      const props = __props;

      return (_ctx, _cache) => {
        return (
          _openBlock(),
          _createElementBlock("div", null, [
            ...(_cache[0] ||
              (_cache[0] = [
                _createElementVNode("h2", null, "About page", -1 /* CACHED */),
              ])),
          ])
        );
      };
    },
  });

  __vine.__vue_vine = true;
  __vine.__hmrId = "ba945b60";

  return __vine;
})();

typeof __VUE_HMR_RUNTIME__ !== "undefined" &&
  __VUE_HMR_RUNTIME__.createRecord(About.__hmrId, About);
"
`;

exports[`test transform > should generate top level declaration bindings in setup returns 1`] = `
"import {
  defineComponent as _defineComponent,
  useCssVars as _useCssVars,
  unref as _unref,
  toDisplayString as _toDisplayString,
  createElementVNode as _createElementVNode,
  Fragment as _Fragment,
  openBlock as _openBlock,
  createElementBlock as _createElementBlock,
} from "vue";

import { ref } from "vue";
import { magicFn1, magicFn2 } from "./other";

export const [x, y] = magicFn1();
export const arrowFunc = () => {
  console.log("arrow func");
};
export function plainFunc() {
  console.log("plain func");
}
class MyClass {
  constructor() {
    console.log("class constructor");
  }
  num() {
    return Math.random() * 100;
  }
  static getFoo() {
    return "foo";
  }
}
export enum MyEnum {
  A = 1,
}
const myInstance = new MyClass();
let myLet = "111";
export let { a, b } = magicFn2();

export const MyComp = (() => {
  const __vine = _defineComponent({
    name: "MyComp",
    /* No props */
    /* No emits */
    setup(__props, { expose: __expose }) {
      __expose();
      const props = __props;
      const count = ref(1);

      return (_ctx, _cache) => {
        return (
          _openBlock(),
          _createElementBlock(
            _Fragment,
            null,
            [
              _createElementVNode(
                "div",
                null,
                "Test top level declarations " + _toDisplayString(count.value),
                1 /* TEXT */,
              ),
              _createElementVNode("ul", null, [
                _createElementVNode(
                  "li",
                  null,
                  "arrow func = " + _toDisplayString(arrowFunc()),
                  1 /* TEXT */,
                ),
                _createElementVNode(
                  "li",
                  null,
                  "plain func = " + _toDisplayString(plainFunc()),
                  1 /* TEXT */,
                ),
                _createElementVNode(
                  "li",
                  null,
                  "class = " + _toDisplayString(MyClass.getFoo()),
                  1 /* TEXT */,
                ),
                _createElementVNode(
                  "li",
                  null,
                  "enum = " + _toDisplayString(MyEnum.A),
                  1 /* TEXT */,
                ),
                _createElementVNode(
                  "li",
                  null,
                  "instance = " + _toDisplayString(myInstance.num()),
                  1 /* TEXT */,
                ),
                _createElementVNode(
                  "li",
                  null,
                  "myLet = " + _toDisplayString(_unref(myLet)),
                  1 /* TEXT */,
                ),
                _createElementVNode(
                  "li",
                  null,
                  "x = " + _toDisplayString(x) + ", y = " + _toDisplayString(y),
                ),
                _createElementVNode(
                  "li",
                  null,
                  "a = " +
                    _toDisplayString(_unref(a)) +
                    ", b = " +
                    _toDisplayString(_unref(b)),
                  1 /* TEXT */,
                ),
              ]),
            ],
            64 /* STABLE_FRAGMENT */,
          )
        );
      };
    },
  });

  __vine.__vue_vine = true;
  __vine.__hmrId = "6832868a";

  return __vine;
})();

typeof __VUE_HMR_RUNTIME__ !== "undefined" &&
  __VUE_HMR_RUNTIME__.createRecord(MyComp.__hmrId, MyComp);
"
`;

exports[`test transform > should generate top level declaration bindings in setup returns 2`] = `
"import {
  defineComponent as _defineComponent,
  useCssVars as _useCssVars,
  toDisplayString as _toDisplayString,
  createElementVNode as _createElementVNode,
  Fragment as _Fragment,
  openBlock as _openBlock,
  createElementBlock as _createElementBlock,
} from "vue";

import { ref } from "vue";
import { magicFn1, magicFn2 } from "./other";

export const [x, y] = magicFn1();
export const arrowFunc = () => {
  console.log("arrow func");
};
export function plainFunc() {
  console.log("plain func");
}
class MyClass {
  constructor() {
    console.log("class constructor");
  }
  num() {
    return Math.random() * 100;
  }
  static getFoo() {
    return "foo";
  }
}
export enum MyEnum {
  A = 1,
}
const myInstance = new MyClass();
let myLet = "111";
export let { a, b } = magicFn2();

export const MyComp = (() => {
  const __vine = _defineComponent({
    name: "MyComp",
    /* No props */
    /* No emits */
    setup(__props, { expose: __expose }) {
      __expose();
      const props = __props;
      const count = ref(1);

      return {
        count,
        x,
        y,
        arrowFunc,
        plainFunc,
        MyClass,
        MyEnum,
        myInstance,
        get myLet() {
          return myLet;
        },
        set myLet(v) {
          myLet = v;
        },
        get a() {
          return a;
        },
        set a(v) {
          a = v;
        },
        get b() {
          return b;
        },
        set b(v) {
          b = v;
        },
        MyComp,
      };
    },
  });
  function __sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
    return (
      _openBlock(),
      _createElementBlock(
        _Fragment,
        null,
        [
          _createElementVNode(
            "div",
            null,
            "Test top level declarations " + _toDisplayString($setup.count),
            1 /* TEXT */,
          ),
          _createElementVNode("ul", null, [
            _createElementVNode(
              "li",
              null,
              "arrow func = " + _toDisplayString($setup.arrowFunc()),
              1 /* TEXT */,
            ),
            _createElementVNode(
              "li",
              null,
              "plain func = " + _toDisplayString($setup.plainFunc()),
              1 /* TEXT */,
            ),
            _createElementVNode(
              "li",
              null,
              "class = " + _toDisplayString($setup.MyClass.getFoo()),
              1 /* TEXT */,
            ),
            _createElementVNode(
              "li",
              null,
              "enum = " + _toDisplayString($setup.MyEnum.A),
              1 /* TEXT */,
            ),
            _createElementVNode(
              "li",
              null,
              "instance = " + _toDisplayString($setup.myInstance.num()),
              1 /* TEXT */,
            ),
            _createElementVNode(
              "li",
              null,
              "myLet = " + _toDisplayString($setup.myLet),
              1 /* TEXT */,
            ),
            _createElementVNode(
              "li",
              null,
              "x = " +
                _toDisplayString($setup.x) +
                ", y = " +
                _toDisplayString($setup.y),
            ),
            _createElementVNode(
              "li",
              null,
              "a = " +
                _toDisplayString($setup.a) +
                ", b = " +
                _toDisplayString($setup.b),
              1 /* TEXT */,
            ),
          ]),
        ],
        64 /* STABLE_FRAGMENT */,
      )
    );
  }
  __vine.render = __sfc_render;
  __vine.__vue_vine = true;
  __vine.__hmrId = "6832868a";

  return __vine;
})();

typeof __VUE_HMR_RUNTIME__ !== "undefined" &&
  __VUE_HMR_RUNTIME__.createRecord(MyComp.__hmrId, MyComp);
"
`;

exports[`test transform > should handle kebab-case props correctly 1`] = `
"import {
  defineComponent as _defineComponent,
  useCssVars as _useCssVars,
  unref as _unref,
  createElementVNode as _createElementVNode,
  normalizeProps as _normalizeProps,
  guardReactiveProps as _guardReactiveProps,
  openBlock as _openBlock,
  createElementBlock as _createElementBlock,
} from "vue";

export const TestComponent = (() => {
  const __vine = _defineComponent({
    name: "TestComponent",
    props: {
      "aria-atomic": { required: true, type: Boolean },
      "aria-busy": { required: true, type: Boolean },
      "data-test-id": { required: true },
    },
    /* No emits */
    setup(__props, { expose: __expose }) {
      __expose();
      const props = __props;

      return (_ctx, _cache) => {
        return (
          _openBlock(),
          _createElementBlock(
            "div",
            _normalizeProps(_guardReactiveProps(_ctx.$props)),
            [
              ...(_cache[0] ||
                (_cache[0] = [
                  _createElementVNode(
                    "h1",
                    null,
                    "Test Component",
                    -1 /* CACHED */,
                  ),
                ])),
            ],
            16 /* FULL_PROPS */,
          )
        );
      };
    },
  });

  __vine.__vue_vine = true;
  __vine.__hmrId = "dabfd4e0";

  return __vine;
})();

typeof __VUE_HMR_RUNTIME__ !== "undefined" &&
  __VUE_HMR_RUNTIME__.createRecord(TestComponent.__hmrId, TestComponent);
"
`;

exports[`test transform > should handle kebab-case props with defaults correctly 1`] = `
"import { useDefaults as _useDefaults } from "vue-vine";
import {
  defineComponent as _defineComponent,
  useCssVars as _useCssVars,
  unref as _unref,
  toRefs as _toRefs,
  toDisplayString as _toDisplayString,
  createElementVNode as _createElementVNode,
  openBlock as _openBlock,
  createElementBlock as _createElementBlock,
} from "vue";

export const TestComponent = (() => {
  const __vine = _defineComponent({
    name: "TestComponent",
    props: {
      "aria-label": {
        /* Simple prop */
      },
      "data-test-id": { required: true },
    },
    /* No emits */
    setup(__props, { expose: __expose }) {
      __expose();
      const props = _useDefaults(__props, {
        "aria-label": () => "default label",
      });
      const { "aria-label": ariaLabel, "data-test-id": dataTestId } =
        _toRefs(props);

      return (_ctx, _cache) => {
        return (
          _openBlock(),
          _createElementBlock("div", null, [
            _createElementVNode(
              "span",
              null,
              _toDisplayString(_ctx.ariaLabel),
              1 /* TEXT */,
            ),
            _createElementVNode(
              "span",
              null,
              _toDisplayString(_ctx.dataTestId),
              1 /* TEXT */,
            ),
          ])
        );
      };
    },
  });

  __vine.__vue_vine = true;
  __vine.__hmrId = "00294b30";

  return __vine;
})();

typeof __VUE_HMR_RUNTIME__ !== "undefined" &&
  __VUE_HMR_RUNTIME__.createRecord(TestComponent.__hmrId, TestComponent);
"
`;

exports[`test transform > should not export on function delcaration when already exported in somewhere 2`] = `
"import {
  defineComponent as _defineComponent,
  useCssVars as _useCssVars,
  unref as _unref,
} from "vue";

const a = 1;
const MyComp = (() => {
  const __vine = _defineComponent({
    name: "MyComp",
    /* No props */
    /* No emits */
    setup(__props, { expose: __expose }) {
      __expose();
      const props = __props;

      return (_ctx, _cache) => {
        return "...";
      };
    },
  });

  __vine.__vue_vine = true;
  __vine.__hmrId = "0fc65dae";

  return __vine;
})();

export { a };
export { MyComp };

typeof __VUE_HMR_RUNTIME__ !== "undefined" &&
  __VUE_HMR_RUNTIME__.createRecord(MyComp.__hmrId, MyComp);
"
`;

exports[`test transform > should transform destructured props 1`] = `
"import { useDefaults as _useDefaults } from "vue-vine";
import {
  defineComponent as _defineComponent,
  useCssVars as _useCssVars,
  unref as _unref,
  createPropsRestProxy as _createPropsRestProxy,
  toRefs as _toRefs,
  toDisplayString as _toDisplayString,
  openBlock as _openBlock,
  createElementBlock as _createElementBlock,
} from "vue";

import { ref, watch } from "vue";

export const MyComp = (() => {
  const __vine = _defineComponent({
    name: "MyComp",
    props: {
      "foo:zee": { required: true },
      bar: {
        /* Simple prop */
      },
      arr: { required: true },
      other1: { required: true },
      other2: { required: true },
    },
    /* No emits */
    setup(__props, { expose: __expose }) {
      __expose();
      const props = _useDefaults(__props, {
        bar: () => 1,
      });
      const { "foo:zee": fooZee, bar, arr, ...rest } = _toRefs(props);
      const rest = _createPropsRestProxy(__props, ["foo:zee", "bar", "arr"]);
      const test1 = ref(props["foo:zee"]);
      const test2 = watch(
        () => props.bar,
        (newVal) => {
          console.log(newVal);
        },
      );
      onMounted(() => {
        console.log("other1", rest.other1);
        console.log("other2", rest.other2);
      });

      return (_ctx, _cache) => {
        return (
          _openBlock(),
          _createElementBlock(
            "div",
            null,
            _toDisplayString(_ctx.name),
            1 /* TEXT */,
          )
        );
      };
    },
  });

  __vine.__vue_vine = true;
  __vine.__hmrId = "7fffacdb";

  return __vine;
})();

typeof __VUE_HMR_RUNTIME__ !== "undefined" &&
  __VUE_HMR_RUNTIME__.createRecord(MyComp.__hmrId, MyComp);
"
`;

exports[`test transform > should transform negative bool props 1`] = `
"import {
  defineComponent as _defineComponent,
  useCssVars as _useCssVars,
  unref as _unref,
  toDisplayString as _toDisplayString,
  createElementVNode as _createElementVNode,
  vShow as _vShow,
  withDirectives as _withDirectives,
  openBlock as _openBlock,
  createElementBlock as _createElementBlock,
  createVNode as _createVNode,
  Fragment as _Fragment,
} from "vue";

export const MyComp = (() => {
  const __vine = _defineComponent({
    name: "MyComp",
    props: {
      foo: { required: true, type: Boolean },
      bar: { required: true },
    },
    /* No emits */
    setup(__props, { expose: __expose }) {
      __expose();
      const props = __props;

      return (_ctx, _cache) => {
        return _withDirectives(
          (_openBlock(),
          _createElementBlock(
            "div",
            null,
            [
              _createElementVNode(
                "p",
                null,
                "bar: " + _toDisplayString(__props.bar),
                1 /* TEXT */,
              ),
            ],
            512 /* NEED_PATCH */,
          )),
          [[_vShow, __props.foo]],
        );
      };
    },
  });

  __vine.__vue_vine = true;
  __vine.__hmrId = "6bb7c988";

  return __vine;
})();

export const App = (() => {
  const __vine = _defineComponent({
    name: "App",
    /* No props */
    /* No emits */
    setup(__props, { expose: __expose }) {
      __expose();
      const props = __props;

      return (_ctx, _cache) => {
        return (
          _openBlock(),
          _createElementBlock(
            _Fragment,
            null,
            [
              _createVNode(MyComp, {
                foo: false,
                bar: "hello",
              }),
              _createVNode(MyComp, {
                foo: true,
                bar: "world",
              }),
            ],
            64 /* STABLE_FRAGMENT */,
          )
        );
      };
    },
  });

  __vine.__vue_vine = true;
  __vine.__hmrId = "36c47294";

  return __vine;
})();

typeof __VUE_HMR_RUNTIME__ !== "undefined" &&
  __VUE_HMR_RUNTIME__.createRecord(MyComp.__hmrId, MyComp);

typeof __VUE_HMR_RUNTIME__ !== "undefined" &&
  __VUE_HMR_RUNTIME__.createRecord(App.__hmrId, App);
"
`;

exports[`test transform > should transform top-level await expressions 1`] = `
"import {
  defineComponent as _defineComponent,
  useCssVars as _useCssVars,
  unref as _unref,
  withAsyncContext as _withAsyncContext,
  openBlock as _openBlock,
  createElementBlock as _createElementBlock,
} from "vue";

export const MyComp = (() => {
  const __vine = _defineComponent({
    name: "MyComp",
    /* No props */
    /* No emits */
    async setup(__props, { expose: __expose }) {
      __expose();
      let __temp, __restore;
      const props = __props;
      (([__temp, __restore] = _withAsyncContext(() => someAsyncFunction())),
        await __temp,
        __restore());
      const data =
        (([__temp, __restore] = _withAsyncContext(() =>
          fetch("https://test-api.com"),
        )),
        (__temp = await __temp),
        __restore(),
        __temp);
      window.fooList[
        (([__temp, __restore] = _withAsyncContext(() => bar())),
        (__temp = await __temp),
        __restore(),
        __temp)
      ] = true;

      useDebounceFn(async () => {
        await doSomeAsync();
      });

      return (_ctx, _cache) => {
        return (_openBlock(), _createElementBlock("div", null, "Test"));
      };
    },
  });

  __vine.__vue_vine = true;
  __vine.__hmrId = "31ff5352";

  return __vine;
})();

typeof __VUE_HMR_RUNTIME__ !== "undefined" &&
  __VUE_HMR_RUNTIME__.createRecord(MyComp.__hmrId, MyComp);
"
`;

exports[`test transform > should transform vineModel with array destructuring for modifiers 1`] = `
"import {
  defineComponent as _defineComponent,
  useCssVars as _useCssVars,
  unref as _unref,
  useModel as _useModel,
  vModelText as _vModelText,
  createElementVNode as _createElementVNode,
  withDirectives as _withDirectives,
  openBlock as _openBlock,
  createElementBlock as _createElementBlock,
  createCommentVNode as _createCommentVNode,
} from "vue";

export const MyComp = (() => {
  const _hoisted_1 = { key: 0 };
  const __vine = _defineComponent({
    name: "MyComp",
    props: {
      modelValue: {},
      modelModifiers: {},
      title: { default: "" },
      titleModifiers: {},
    },
    emits: ["update:modelValue", "update:title"],
    setup(__props, { expose: __expose }) {
      __expose();
      const props = __props;

      const [value, modifiers] = _useModel(__props, "modelValue");
      const [title, titleMods] = _useModel(__props, "title");

      return (_ctx, _cache) => {
        return (
          _openBlock(),
          _createElementBlock("div", null, [
            _withDirectives(
              _createElementVNode(
                "input",
                {
                  "onUpdate:modelValue":
                    _cache[0] ||
                    (_cache[0] = ($event) => (value.value = $event)),
                },
                null,
                512 /* NEED_PATCH */,
              ),
              [[_vModelText, value.value]],
            ),
            modifiers.value.trim
              ? (_openBlock(),
                _createElementBlock("p", _hoisted_1, "Trim active"))
              : _createCommentVNode("v-if", true),
          ])
        );
      };
    },
  });

  __vine.__vue_vine = true;
  __vine.__hmrId = "684965d8";

  return __vine;
})();

typeof __VUE_HMR_RUNTIME__ !== "undefined" &&
  __VUE_HMR_RUNTIME__.createRecord(MyComp.__hmrId, MyComp);
"
`;
